PULSE-97: Update build to use Java 11